<resources>
  <string name="app_name">Save The Mother And Child</string>
  <string name="welcome_text">Are You Doctor or Pregnent Woman?</string>
  <string name="your_status">Your status</string>
  <string name="doctor">Doctor</string>
  <string name="woman">Woman</string>
  <string name="enter_full_name">Enter Full Name</string>
  <string name="enter_union">Enter Union</string>
  <string name="pregnant_woman">Pregnant Woman</string>
  <string name="ovulation_days">Ovulation (days)</string>
  <string name="pre_pregnanacy_height_in_cm">Pre Pregnanacy Height (in cm)</string>
  <string name="enter_division">Enter Division</string>
  <string name="enter_district">Enter District</string>
  <string name="enter_mobilnumber">Enter Mobile Number</string>
  <string name="seclect_due_date">Seclect Due Date</string>
  <string name="enter_date">Enter Date(Due or LMP)</string>
  <string name="date_status">Date Status</string>
  <string name="others">Others</string>
  <string name="personal_info">Enter Personal Information</string>
  <string name="name">Name</string>
  <string name="your_specialisation">Your Specialisation</string>
  <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="affiliations">Enter Affiliations</string>
  <string name="enter_hospital_name">Enter Hospital Name</string>
  <string name="enter_hospital_number">Enter Hospital Number</string>
  <string name="add_more">Add More</string>
  <string name="save">Save</string>
  <string name="done">Done</string>
</resources>
