<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        tools:ignore="ScrollViewSize"
        android:background="#F1F5D6">

        <TextView
            android:text="@string/personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_personal_info"
            tools:text="Enter Your personal Info"
            android:textSize="18sp"
            android:layout_marginTop="45dp"

            android:textStyle="normal|bold"
            android:textColor="#458789"
            android:layout_marginLeft="50dp"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:background="#D7E4E6"
            android:layout_marginLeft="10dp"
            tools:ignore="RtlHardcoded">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_doc_full_name"
                android:hint="Enter Full Name"
                tools:ignore="HardcodedText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_specialisation"
                android:hint="Yours Specialisation"
                tools:ignore="HardcodedText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/txt_doc_cell"
                android:hint="@string/enter_your_mobile_number" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txt_age"
                android:hint="Enter Your Age"
                tools:ignore="HardcodedText" />

            <TextView
                android:text="gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_gender"
                tools:text="Enter Your Gender"
                tools:ignore="HardcodedText"
                android:textSize="18sp" />

            <CheckBox
                android:text="@string/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox_male"
                style="@android:style/Widget.CompoundButton.CheckBox" />

            <CheckBox
                android:text="Female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox_female"
                style="@android:style/Widget.CompoundButton.CheckBox"
                tools:ignore="HardcodedText"
                tools:text="Female" />

            <Button
                android:text="@string/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_save_pi"
                tools:ignore="DuplicateIds,RtlHardcoded" />

        </LinearLayout>

        <TextView
            android:text="@string/affiliations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_affiliations"
            tools:text="Enter Your Affiliations"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_marginTop="10dp"
            android:textColor="#458789"
            android:layout_marginLeft="50dp"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:background="#E6D7D7"
            android:layout_width="357dp"
            android:layout_marginLeft="10dp"
            tools:ignore="RtlHardcoded">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_hospitalName"
                android:hint="@string/enter_hospital_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/txt_hos_number"
                android:hint="@string/enter_hospital_number" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_hospitaladdress"
                android:hint="Enter City"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:text="Done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_save"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button"
                    tools:ignore="HardcodedText" />

                <Button
                    android:text="@string/add_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_addmore"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button"
                    tools:ignore="InefficientWeight,RtlHardcoded"
                    android:layout_marginLeft="150dp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>