<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#418B8A">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/top">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/welcome_text"
        android:paddingTop="40dp"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:textColor="#FFFFFF" />
  </LinearLayout>

  <LinearLayout
      android:paddingTop="40dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_below="@+id/top"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor"
        android:id="@+id/btn_doctor"
        android:background="@drawable/doctor_button"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        android:textColor="@android:color/white" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/user_button"
        android:text="@string/woman"
        android:id="@+id/btn_woman"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        android:textColor="#FFFFFF" />
  </LinearLayout>
</RelativeLayout>
